Add widgets, work sub records
